--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TravelAr</title>
+      <link rel="icon" href="/path/public/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
