--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TravelAr</title>
-      <link rel="icon" href="/path/public/favicon.ico" type="image/x-icon" />
+     <link rel="stylesheet" href="/src/App.css" />
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="root"></div>
